[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-logtriage-team-shanmukha"
version = "0.0.1"
description = "RL environment for DevOps log triage"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="CH Shanmukha Venkata Lakshman" },
]
dependencies = [
    "requests",
    "numpy",
    "gymnasium",
    "torch"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
