[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-logtriage-team-shanmukha"
version = "0.1.0"
description = "RL environment for DevOps log triage"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "CH Shanmukha Venkata Lakshman" }
]
dependencies = [
    "requests",
    "numpy",
    "gymnasium",
    "torch",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
